--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,10 @@
 alembic==1.16.1
 apispec==6.8.2
+APScheduler==3.11.0
 bcrypt==4.3.0
 blinker==1.9.0
+certifi==2025.6.15
+charset-normalizer==3.4.2
 click==8.2.1
 colorama==0.4.6
 Flask==3.1.1
@@ -11,6 +14,7 @@ Flask-Migrate==4.1.0
 flask-smorest==0.46.1
 Flask-SQLAlchemy==3.1.1
 greenlet==3.2.3
+idna==3.10
 itsdangerous==2.2.0
 Jinja2==3.1.6
 Mako==1.3.10
@@ -19,7 +23,11 @@ marshmallow==4.0.0
 packaging==25.0
 PyJWT==2.10.1
 python-dotenv==1.1.0
+requests==2.32.4
 SQLAlchemy==2.0.41
 typing_extensions==4.14.0
+tzdata==2025.2
+tzlocal==5.3.1
+urllib3==2.5.0
 webargs==8.7.0
 Werkzeug==3.1.3
