--- a/requirements.txt
+++ b/requirements.txt
@@ -21,6 +21,7 @@ Mako==1.3.10
 MarkupSafe==3.0.2
 marshmallow==4.0.0
 packaging==25.0
+psycopg2==2.9.10
 PyJWT==2.10.1
 python-dotenv==1.1.0
 requests==2.32.4
