--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,17 @@
 alembic==1.16.1
+annotated-types==0.7.0
+anyio==4.9.0
 apispec==6.8.2
 APScheduler==3.11.0
 bcrypt==4.3.0
 blinker==1.9.0
 certifi==2025.6.15
+cffi==1.17.1
 charset-normalizer==3.4.2
+clerk-backend-api==2.2.0
 click==8.2.1
 colorama==0.4.6
+cryptography==44.0.3
 Flask==3.1.1
 Flask-Bcrypt==1.0.1
 Flask-JWT-Extended==4.7.1
@@ -14,6 +19,9 @@ Flask-Migrate==4.1.0
 flask-smorest==0.46.1
 Flask-SQLAlchemy==3.1.1
 greenlet==3.2.3
+h11==0.16.0
+httpcore==1.0.9
+httpx==0.28.1
 idna==3.10
 itsdangerous==2.2.0
 Jinja2==3.1.6
@@ -22,10 +30,15 @@ MarkupSafe==3.0.2
 marshmallow==4.0.0
 packaging==25.0
 psycopg2==2.9.10
+pycparser==2.22
+pydantic==2.11.7
+pydantic_core==2.33.2
 PyJWT==2.10.1
 python-dotenv==1.1.0
 requests==2.32.4
+sniffio==1.3.1
 SQLAlchemy==2.0.41
+typing-inspection==0.4.1
 typing_extensions==4.14.0
 tzdata==2025.2
 tzlocal==5.3.1
